--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -73,6 +73,7 @@
     
       .content p {
         margin-top: 1.5rem;
+        margin-bottom: 2.5rem;
       }
 
       table {
@@ -82,6 +83,7 @@
             min-width: 200px;
         }
       }
+
   }
 
   @media screen and (max-width: 650px) {
